--- a/view/frontend/templates/script.phtml
+++ b/view/frontend/templates/script.phtml
@@ -1,8 +1,8 @@
 <?php
 declare(strict_types=1);
 
-use Magento\Framework\View\Element\Template;
+use Smile\React\Block\Script;
 
-/** @var $block Template */
+/** @var $block Script */
 ?>
 <script src="<?= '/js/react.bundle.js' ?>"></script>
